Add option to toggle polyphony

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <div id="instructions_box" class="box">
     Click on points to listen to sounds<br>
-    Press alt key and move mouse to play on hover<br>
+    Press alt key and move mouse to play on hover (mono: <input type="checkbox" onchange="toggleMonoMode(this)"/>)<br>
     Click + drag to navigate the map (press "meta" to zoom)<br>
   </div>
 
